# Cars-part

./: .actionlintrc.yml  .env.backup.20250921_165007  .env.backup.20250922_113434  .flake8  .gitignore  ADMIN_PANEL_COMPLETE.md  AI_INTEGRATION_COMPLETE.md  AI_SUCCESS_SUMMARY.md  BOT_TESTING_CHECKLIST.md  Caddyfile  DEPLOYMENT.md  DEPLOYMENT_TEST.md  ENHANCED_CI_CD_GUIDE.md  FINAL_WIZARD_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_SECRETS_PASSWORD_SETUP.md  GITHUB_SECRETS_SETUP.md  OTP_PRODUCTION_FIX_SUMMARY.md  PARTS_MANAGEMENT_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHONE_LOGIN_FEATURE.md  PRODUCTION_DEPLOYMENT_FIX.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  README.md  REAL_PRODUCTION_DEPLOYMENT.md  SCAFFOLD_READY.md  SERVER_SETUP_GUIDE.md  TELEGRAM_BOT_ENHANCED.md  URGENT_DUAL_SPA_FIX.md  WEB_LOGIN_TEST_GUIDE.md  WIZARD_API_COMPLETE.md  WIZARD_BOT_COMPLETE.md  ai_test_report.html  ai_test_report.json  ai_test_report.md  alembic.ini  china-car-parts-api.service  china-car-parts-bot.service  (+75 more)
.github/: BRANCH_PROTECTION.md  ENVIRONMENT_SETUP.md
alembic/: env.py
app/: __init__.py
deployment/: PRODUCTION_SETUP.md
docs/: PARTS_INVENTORY_INTEGRATION_PHASE1_SUMMARY.md  SMS_Integration_Project_Breakdown.md  architecture.md  brief.md  data-model.md  open-questions.md  sidebar-implementation.md  user-flows.md  wizard-flow.md
scripts/: browser_font_test.html  build_admin_panel_production.sh  ci_guardrails_parts.py  create_admin_user.py  create_all_tables.py  create_enhanced_sample_data.py  create_otp_tables.py  create_otp_tables_production.py  create_sms_tables.py  create_stock_pricing_tables.py  create_telegram_tables.py  deploy_admin_panel_fix.sh  deploy_font_fix.sh  deploy_otp_fix.sh  diagnose_otp_server.py  fix_production_admin_panel.sh  migrate_to_postgresql.py  migrate_users_table.py  populate_sample_images.py  populate_vehicle_database.py  run_dev.sh  send_sms_simple.py  send_test_sms.py  server_font_check.sh  setup_production.sh  smoke_test_parts_integration.py  start_admin_panel.sh  start_all_servers.sh  start_api.sh  (+24 more)
(+395 files in other folders)
